<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormPessoaFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_completo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="12dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone_celular">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etTelefoneCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:padding="12dp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/spnGenero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:background="#818181" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/data_nascimento">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:padding="12dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/btFinalizarCadastroPessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_cadastro"
        android:textColor="@android:color/white"
        app:cornerRadius="24dp" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btLimparCadastroPessoa"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpar_formul_rio"
        android:textColor="@color/colorPrimary" />

</LinearLayout>