<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/cidade"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#919191" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#313131"
                tools:text="João" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/cep"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#919191" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#313131"
                tools:text="João" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/endere_o"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#919191" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#313131"
                tools:text="João" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/bairro"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#919191" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvBairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#313131"
                tools:text="João" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/estado"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#919191" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#313131"
                tools:text="João" />

        </LinearLayout>
    </android.support.design.card.MaterialCardView>
</FrameLayout>