<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="@string/nome_completo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="#919191" />

                <TextView
                    android:id="@+id/tvNomePessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="#313131"
                    tools:text="João" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="@string/telefone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="#919191" />

                <TextView
                    android:id="@+id/tvTelefonePessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#515151"
                    android:textSize="12sp"
                    tools:text="(43) 1234-1234" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0.5"
                        android:text="Gênero"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#919191" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="end"
                        android:text="@string/data_de_nascimento"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#919191" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvGeneroPessoa"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#515151"
                        tools:drawableLeft="@drawable/ic_gender_male"
                        tools:text="Masculino" />

                    <TextView
                        android:id="@+id/tvDataNascimentoPessoa"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#515151"
                        tools:text="23/08/2000" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

    </android.support.design.card.MaterialCardView>

</FrameLayout>